# swarm_intelligent_robot_course_task

./: .gitignore  README.md
src/Swarm-Simulator/src/uav_simulator/Utils/visual_utils/include/visual_utils/: planning_visualization.hpp
src/Swarm-Simulator/src/uav_simulator/Utils/visual_utils/src/: planning_visualization.cpp
src/Swarm-Simulator/src/uav_simulator/mockamap/launch/: post2d.launch
src/Swarm-Simulator/src/uav_simulator/so3_control/src/: control_example.cpp
src/Swarm-Simulator/src/uav_simulator/so3_quadrotor_simulator/config/: rviz.rviz
src/Swarm-Simulator/src/uav_simulator/so3_quadrotor_simulator/launch/: task1.launch  task2.launch  task3.launch  task4.launch
src/Swarm-Simulator/src/uav_simulator/so3_quadrotor_simulator/script/: generate_positions.py
src/uav1/Minimumsnap/: CMakeLists.txt  package.xml
src/uav1/Minimumsnap/config/: minimumsnap_Para.yaml
src/uav1/Minimumsnap/include/: Minimumsnap.hpp
src/uav1/Minimumsnap/launch/: test.launch  visual.rviz
src/uav1/Minimumsnap/src/: Minimumsnap.cpp  Test.cpp  Test_Qt.cpp
src/uav1/position_control/: CMakeLists.txt  package.xml
src/uav1/position_control/src/: leader_position_command_publisher.cpp  uav1.cpp  uav2.cpp
src/visualization/fov_visualization/: CMakeLists.txt  package.xml
src/visualization/fov_visualization/launch/: fov_visualizer.launch
src/visualization/fov_visualization/src/: fov_vis.cpp  fov_vis2.cpp  region_vis.cpp  region_vis2.cpp
src/visualization/marker_publisher/: CMakeLists.txt  package.xml
src/visualization/marker_publisher/src/: marker_publisher.cpp
src/visualization/rule_check/: CMakeLists.txt  package.xml
src/visualization/rule_check/src/: task1.cpp  task2.cpp
